--- a/scss/components/component-search-modal.scss
+++ b/scss/components/component-search-modal.scss
@@ -9,12 +9,12 @@
     max-height: 100vh;
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
-    box-shadow:0 .4rem .5rem rgba(0,0,0,.1); 
     transition:all 0.3s ease;
 }
 
 details-open.open .header__search .search-modal {
     top: 0;
+    box-shadow:0 .4rem .5rem rgba(0,0,0,.1); 
 }
 
 .search-modal__full {
@@ -28,13 +28,12 @@ details-open.open .header__search .search-modal {
 details-open.open .header__search .search-modal__overlay:after {
     position: absolute;
     content: "";
-    //background-color: rgb(0,0,0,.2);
+    background: rgba(0,0,0, .1);
+    backdrop-filter: blur(0.4rem);
     top: 100%;
     left: 0;
     right: 0;
     height: 100vh;
-    backdrop-filter: blur(.4rem);
-    -webkit-backdrop-filter: blur(.4rem);
     z-index: 1;
 }
 
