--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -7,6 +7,7 @@
     assign logo_height = section.settings.logo_width | divided_by: section.settings.logo.aspect_ratio
     assign background_color = section.settings.background_color
     assign search_background_color = section.settings.search_background_color
+    assign mobile_background_color = section.settings.mobile_background_color
     assign text_color = section.settings.text_color
     assign badge_color = section.settings.badge_color
     assign blocks = section.blocks
@@ -20,6 +21,7 @@
 --header-text-color: {{ text_color }};
 --header-badge-color: {{ badge_color }};
 --header-search-background-color: {{ search_background_color }};
+--header-mobile-background-color: {{ mobile_background_color }};
 --header-logo-width: {{ logo_width }}px;
 {% endcapture %}
 
@@ -33,7 +35,7 @@
     <header class="header js-header d-flex align-items-center">
         <div class="header__wrapper container">
             <div class="row">
-                <div class="col-6 col-sm-6 col-md-2 col-lg-2 align-self-center justify-content-start d-flex">
+                <div class="col-5 col-sm-5 col-md-3 col-lg-2 align-self-center justify-content-start d-flex">
                     <div class="header__icon-open">
                         <a
                             class="js-menu-toggle focus-inset"
@@ -85,7 +87,7 @@
                         {% endif %}
                     </div>
                 </div>
-                <div class="col-1 col-sm-1 col-md-6 col-lg-7 align-self-center d-menu-col">
+                <div class="col-1 col-sm-1 col-md-5 col-lg-7 align-self-center d-menu-col">
                     <nav
                         id="MegaMenu"
                         class="header__menu header__menu--main js-mobile-menu"
@@ -323,6 +325,11 @@
             "type": "color",
             "id": "search_background_color",
             "label": "Search background color"
+        },
+        {
+            "type": "color",
+            "id": "mobile_background_color",
+            "label": "Mobile background color"
         },
         {
             "type": "checkbox",
