delete icons css

--- a/scss/components/component-card-products.scss
+++ b/scss/components/component-card-products.scss
@@ -177,7 +177,7 @@ quantity-input {
     .visible, .active {
         display: block!important;
     }
-    .swatch--product.swatch-item-Color {
+    .swatch--product.swatch-item-color {
         .swatch-element {
             width: 20px;
             height: 20px;
