--- a/scss/sections/section-header.scss
+++ b/scss/sections/section-header.scss
@@ -79,6 +79,8 @@
     }
     .icon {
         font-size: 2rem;
+        width: 2rem;
+        height: 2.1rem;
         vertical-align: middle;
         pointer-events: none;
     }
