--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -1,19 +1,19 @@
 <!doctype html>
-<html class='no-js' lang='{{ request.locale.iso_code }}'>
+<html class="no-js" lang="{{ request.locale.iso_code }}">
     <head>
-        <meta charset='utf-8'>
-        <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-        <meta name='viewport' content='width=device-width,initial-scale=1'>
-        <meta name='theme-color' content=''>
-        <link rel='canonical' href='{{ canonical_url }}'>
-        <link rel='preconnect' href='https://cdn.shopify.com' crossorigin>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <meta name="theme-color" content="">
+        <link rel="canonical" href="{{ canonical_url }}">
+        <link rel="preconnect" href="https://cdn.shopify.com" crossorigin>
 
         {% if settings.favicon != blank %}
-            <link rel='icon' type='image/png' href='{{ settings.favicon | image_url: width: 32, height: 32 }}'>
+            <link rel="icon" type="image/png" href="{{ settings.favicon | image_url: width: 32, height: 32 }}">
         {% endif %}
 
         {% unless settings.type_header_font.system? and settings.type_body_font.system? %}
-            <link rel='preconnect' href='https://fonts.shopifycdn.com' crossorigin>
+            <link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin>
         {% endunless %}
 
         <title>
@@ -24,7 +24,7 @@
         </title>
 
         {% if page_description %}
-            <meta name='description' content='{{ page_description | escape }}'>
+            <meta name="description" content="{{ page_description | escape }}">
         {% endif %}
 
         {% render 'meta-tags' %}
@@ -92,18 +92,17 @@
             }
         {% endstyle %}
 
-        {{ 'plugins.css' | asset_url | stylesheet_tag }}
         {{ 'base.css' | asset_url | stylesheet_tag }}
 
         {% unless settings.type_body_font.system? %}
-            <link rel='preload' as='font' href='{{ settings.type_body_font | font_url }}' type='font/woff2' crossorigin>
+            <link rel="preload" as="font" href="{{ settings.type_body_font | font_url }}" type="font/woff2" crossorigin>
         {% endunless %}
         {% unless settings.type_header_font.system? %}
             <link
-                rel='preload'
-                as='font'
-                href='{{ settings.type_header_font | font_url }}'
-                type='font/woff2'
+                rel="preload"
+                as="font"
+                href="{{ settings.type_header_font | font_url }}"
+                type="font/woff2"
                 crossorigin
             >
         {% endunless %}
@@ -113,14 +112,14 @@
         </script>
     </head>
 
-    <body class='template-{{- template -}}'>
-        <a class='skip-to-content-link button visually-hidden' href='#MainContent'>
+    <body class="template-{{- template -}}">
+        <a class="skip-to-content-link button visually-hidden" href="#MainContent">
             {{ 'accessibility.skip_to_text' | t }}
         </a>
 
         {% section 'header' %}
 
-        <main id='MainContent' class='content-for-layout focus-none' role='main' tabindex='-1'>
+        <main id="MainContent" class="content-for-layout focus-none" role="main" tabindex="-1">
             {{ content_for_layout }}
         </main>
 
@@ -129,10 +128,12 @@
         {% section 'cart-drawer' %}
 
         <ul hidden>
-            <li id='a11y-refresh-page-message'>{{ 'accessibility.refresh_page' | t }}</li>
+            <li id="a11y-refresh-page-message">{{ 'accessibility.refresh_page' | t }}</li>
         </ul>
 
-        <script src='{{ 'helper-functions.js' | asset_url }}' defer='defer'></script>
-        <script src='{{ 'global.js' | asset_url }}' defer='defer'></script>
+        {{ 'main.css' | asset_url | stylesheet_tag }}
+
+        <script src="{{ 'helper-functions.js' | asset_url }}" defer="defer"></script>
+        <script src="{{ 'global.js' | asset_url }}" defer="defer"></script>
     </body>
 </html>
