--- a/scss/components/component-mobile-menu.scss
+++ b/scss/components/component-mobile-menu.scss
@@ -365,4 +365,13 @@
         border: 1px solid var(--color-secondary-button-background);
         color: var(--color-secondary-button-background);
     }
+
+    .cart-count-line, .cart-count-line + span {
+        display: none;
+    }
+
+    span.cart-count-count {
+        left: -13px;
+        top: 0;
+    }
 }
