--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -7,31 +7,31 @@
             assign image_box = product.featured_image
         endif
     -%}
-    <div class='card-product__wrapper js-card-product-wrapper'>
+    <div class="card-product__wrapper js-card-product-wrapper">
         {%- assign video = product.media | where: 'media_type', 'video' -%}
         {% if video != blank %}
-            <video-hover class='card-product__media-wrapper'>
-                <div class='video-product video-product__size--{{ img_size }}'>
-                    <div class='video-product__video video'>
+            <video-hover class="card-product__media-wrapper">
+                <div class="video-product video-product__size--{{ img_size }}">
+                    <div class="video-product__video video">
                         {% for media in product.media %}
                             {% if media.media_type == 'video' %}
                                 <video
-                                    class='js-video video__media html5'
-                                    title='{{ title | escape }}'
+                                    class="js-video video__media html5"
+                                    title="{{ title | escape }}"
                                     playsinline
                                     loop
                                     muted
                                     disablePictureInPicture
-                                    width='1440'
-                                    controlsList='noplaybackrate nodownload'
+                                    width="1440"
+                                    controlsList="noplaybackrate nodownload"
                                 >
-                                    <source src='{{  media.sources[1].url  }}' type='video/mp4'>
+                                    <source src="{{  media.sources[1].url  }}" type="video/mp4">
                                 </video>
                             {% endif %}
                         {% endfor %}
                     </div>
                 </div>
-                <picture class='card-product__media media__size--{{ img_size }} media js-card-product-media'>
+                <picture class="card-product__media media__size--{{ img_size }} media js-card-product-media">
                     {% if image_custom != blank %}
                         {% render 'image', image_box: image_custom, image_box_class: 'card-product__image' %}
                     {% else %}
@@ -40,8 +40,8 @@
                 </picture>
             </video-hover>
         {% else %}
-            <div class='card-product__media-wrapper '>
-                <picture class='card-product__media media__size--{{ img_size }} media js-card-product-media'>
+            <div class="card-product__media-wrapper ">
+                <picture class="card-product__media media__size--{{ img_size }} media js-card-product-media">
                     {% if image_custom != blank %}
                         {% render 'image', image_box: image_custom, image_box_class: 'card-product__image' %}
                     {% else %}
@@ -50,15 +50,15 @@
                 </picture>
             </div>
         {% endif %}
-        <div class='card-product__content card-product__content--{{ fill }}'>
+        <div class="card-product__content card-product__content--{{ fill }}">
             {% if show_vendor %}
-                <span class='card-product__vendor'>{{ product.vendor }}</span>
+                <span class="card-product__vendor">{{ product.vendor }}</span>
             {% endif %}
-            <h4 class='card-product__title js-card-product-title'>
-                <a href='{{ product.url | within: collection }}'>
+            <h5 class="card-product__title js-card-product-title">
+                <a href="{{ product.url | within: collection }}">
                     {{ product.title | truncate: 30 | escape }}
                 </a>
-            </h4>
+            </h5>
             {% render 'price',
                 product: product,
                 price_class: 'card-product__price js-card-product-price',
@@ -73,7 +73,7 @@
                         show_quantity: show_quantity
                     %}
                 {% else %}
-                    <a class='button button--secondary' href='{{ product.url | within: collection }}'>
+                    <a class="button button--secondary" href="{{ product.url | within: collection }}">
                         {{- 'products.product.details' | t -}}
                     </a>
                 {% endif %}
